--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ json_output/
 xmlfiles/
 figs/
 __pycache__/
+.DS_Store
 
 # Created by 
 https://www.toptal.com/developers/gitignore/api/jupyternotebooks
